Fix training card layout issues

--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 786px) {
   #header {
-    padding-inline: 5%;
+    padding-inline: 4%;
     padding-left: 1.5%;
   }
 }
