--- a/client/src/app/components/training-plan-card/training-plan-card.component.scss
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.scss
@@ -26,7 +26,7 @@
 .card-custom {
   overflow: hidden;
   min-height: 450px;
-  box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
+  box-shadow: 0 0 12px rgba(10, 10, 10, 0.3);
 }
 
 .card-custom-img {
