--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,7 +24,7 @@ body {
 }
 @media screen and (max-width: 786px) {
   .outlet-wrapper {
-    padding-inline: 5%;
+    padding-inline: 4%;
     padding-bottom: 5rem;
   }
 }
